# challenge

./: .clang-tidy  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  CMakePresets.json  README.md  conanfile.py
.github/workflows/: ci.yml
app/: CMakeLists.txt
app/src/: main.cpp
conan/locks/: README.md
conan/profiles/linux/: clang  gcc
conan/profiles/windows/: msvc
plugin/: CMakeLists.txt
plugin/src/: plugin.cpp
plugin_segfault/: CMakeLists.txt
plugin_segfault/include/plugin_segfault/: plugin_segfault.h
plugin_segfault/src/: plugin_segfault.cpp
test_package/: CMakeLists.txt  conanfile.py
test_package/src/: main.cpp
tests/: CMakeLists.txt  test_plugin.cpp  test_plugin_segfault.cpp
